--- a/pom.xml
+++ b/pom.xml
@@ -14,4 +14,14 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
+    <dependencies>
+        <!-- https://mvnrepository.com/artifact/com.sun.messaging.mq/fscontext -->
+        <dependency>
+            <groupId>com.sun.messaging.mq</groupId>
+            <artifactId>fscontext</artifactId>
+            <version>4.4.2</version>
+            <scope>compile</scope>
+        </dependency>
+
+    </dependencies>
 </project>
